--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --verbose",
     "dev": "nodemon index.js"
   },
   "author": "Jade Y",
   "license": "MIT",
   "devDependencies": {
+    "jest": "^28.1.3",
     "nodemon": "^2.0.19"
   },
   "dependencies": {
