--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "scripts": {
     "start": "node index.js",
     "test": "jest --verbose",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "lint": "eslint ."
   },
   "author": "Jade Y",
   "license": "MIT",
   "devDependencies": {
+    "eslint": "^8.19.0",
     "jest": "^28.1.3",
     "nodemon": "^2.0.19"
   },
